--- a/index (1).html
+++ b/index (1).html
@@ -12,7 +12,7 @@
     <div class="container">
         <h1>Extrator de palavras-chave</h1>
         <textarea id="entrada-de-texto" placeholder="Digite ou cole seu texto aqui..."></textarea>
-        <button id="botao-palavrachave">Extrair</button>
+        <button id="botao-termodepesquisa">Extrair</button>
         <div id="resultado-palavrachave"></div>
     </div>
     <script src="script.js"></script>
