--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="container">
-        <h1>Extrator de palavras-chave</h1>
+        <h1>Identificador de palavras-chave:</h1>
         <textarea id="entrada-de-texto" placeholder="Digite ou cole seu texto aqui..."></textarea>
         <button id="botao-termodepesquisa">Extrair</button>
         <div id="resultado-palavrachave"></div>
